fixed countup elements moving when timer is active. settime is now aligned

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -9,7 +9,7 @@ div {
   color: $font-secondary;  
 }
 .c-task__label {
-  font-size: $font-size-label;
+  font-size: $font-size-label
 }
 .c-btn {
   font-size: $font-size-btn;
@@ -53,5 +53,8 @@ div {
 }
 .c-prev-date, .c-next-date {
   opacity: 0.5;
-
+}
+.c-task__stop-time, .c-task__start-time {
+  font-size: 1em;
+  font-weight: bold;
 }
